--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  image_picker: ^1.1.2
+  flutter_dotenv: ^5.1.0
+  google_generative_ai: ^0.4.3
+  firebase_core: ^3.1.1
+  cloud_firestore: ^5.0.2
+  firebase_storage: ^12.1.0
+  firebase_auth: ^5.1.1
+  google_sign_in: ^6.2.1
+  flutter_riverpod: ^2.5.1
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
